fix(grid): match navbar collapse to grid breakpoints

--- a/less/variables.less
+++ b/less/variables.less
@@ -39,7 +39,6 @@
 @icon-font-path: @font-path;
 
 // navbar
-@grid-float-breakpoint: 1000px;
 @navbar-height: 40px;
 @navbar-border-radius: 0;
 @navbar-default-bg: @gray-darker;
